@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '4.0.1'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.diffplug.spotless' version '6.25.0'
 }
 
 group = 'com.asdf'
@@ -20,10 +21,25 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+    implementation 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    testLogging {
+        events "passed", "skipped", "failed"
+        outputs.upToDateWhen {false}
+        jvmArgs '-XX:+EnableDynamicAgentLoading'
+    }
 }
+
+spotless{
+    java{
+        googleJavaFormat('1.22.0').aosp().reflowLongStrings()
+    }
+}
+
+build.dependsOn 'spotlessApply'
